--- a/SocialTextField/Base.lproj/Main.storyboard
+++ b/SocialTextField/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.96078431369999995" green="0.65098039220000004" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="oRL-JR-abU" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="8kg-q8-jBE"/>
                             <constraint firstItem="oRL-JR-abU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NXP-WF-maD"/>
